--- a/manyou/inst/app/include.html
+++ b/manyou/inst/app/include.html
@@ -4,13 +4,13 @@
     class="btn btn-info"
     data-sharer="twitter"
     data-title="Manyou | Text Data of the Manyoshu｜万葉集の全文検索（KWIC）"
-    data-url="https://github.com/paithiov909/manyou"
+    data-url="https://github.com/paithiov909/tanka2kwic/manyou"
   >Share on Twitter</button>
   <button
     type="button"
     class="btn btn-success"
     data-sharer="line"
     data-title="Manyou | Text Data of the Manyoshu｜万葉集の全文検索（KWIC）"
-    data-url="https://github.com/paithiov909/manyou"
+    data-url="https://github.com/paithiov909/tanka2kwic/manyou"
   >Share on LINE</button>
 </div>
